Fixed renewable status for the krbtgt principal

--- a/template.j2
+++ b/template.j2
@@ -145,7 +145,8 @@
             "recipeNames": [
                 "metron-db-setup",
                 "mysql-client",
-                "requests-upgrade"
+                "requests-upgrade",
+                "kdc-fix"
             ],
             "recoveryMode": "MANUAL"
         },
