Added compact mode to cli script and tidied up blueprint

--- a/template-compact.j2
+++ b/template-compact.j2
@@ -27,7 +27,7 @@
         {
             "nodeCount": 1,
             "group": "master",
-            "type": "CORE",
+            "type": "GATEWAY",
             "parameters": {},
             "template": {
                 "volumeCount": 1,
