--- a/template-compact.j2
+++ b/template-compact.j2
@@ -113,6 +113,7 @@
     "cluster": {
         "emailNeeded": false,
         "rdsConfigNames": [],
+        "configStrategy": "ALWAYS_APPLY",
         "ambari": {
             "blueprintName": "HCP - Compact",
             "enableSecurity": true,
