Support HCP deploymnet on ycloud. Created required template and blueprint changes.

--- a/template-aws.j2
+++ b/template-aws.j2
@@ -8,7 +8,7 @@
         "ranger.kms.password": "{{ ranger.kms.password }}"
     },
     "general": {
-        "name": "HCP",
+        "name": "HCP {{hcpVersion}}",
         "credentialName": "{{ credentialName }}"
     },
     "placement": {
